# Fastapi-Gateway-Mircoservice-Register-System

./: docker-compose.yml  pyproject.toml
gateway/: .env  Dockerfile  __main__.py
gateway/server/: server_main.py  server_settings.py
gateway/src/: __init__.py
gateway/src/database/: exceptions.py  mongodb_db.py
gateway/src/endpoints/: forward_delete.py  forward_get.py  forward_post.py  forward_put.py  forward_websocket.py
gateway/src/middleware/: cors_middleware.py  trusted_host_middleware.py
gateway/src/models/: db_account.py  index.py  sign_in_error.py
gateway/src/settings/: api_settings.py  cors_settings.py  trusted_host_settings.py
